# plf_core

./: Cargo.toml
src/: lib.rs
src/gmath/: mod.rs
src/gmath/funcs/: mod.rs  ratio.rs
src/gmath/mat/: mod.rs
src/gmath/vec/: mod.rs
