[package]
name = "plf_core"
version = "0.1.0"
authors = ["zack"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = { version = "0.12.0", features = ["serde"] }
num-traits = "0.2.14"
approx = "0.4.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


